Fixed up spacing errors when entering second url

--- a/source_and_sort/public/css/styles.css
+++ b/source_and_sort/public/css/styles.css
@@ -13,6 +13,7 @@
 	background: #44453f;
 	color: white;
 	display: inline-block;
+	width: 800px;
 }
 
 body {
